--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "format": "prettier --write 'src/**/*.js'",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json"
+    "format": "prettier --write 'src/**/*.ts'",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "postinstall": "./remove-react-from-undux.sh"
   },
   "private": true,
   "dependencies": {
@@ -29,10 +30,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.1.7",
     "@angular-devkit/build-angular": "~0.8.1",
-    "typescript": "~2.9.2",
     "@angular/cli": "~6.2.1",
+    "@angular/compiler-cli": "^6.1.7",
     "@angular/language-service": "^6.1.7",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
@@ -45,8 +45,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
+    "prettier": "^1.14.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.1",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "typescript": "~2.9.2"
   }
 }
